# llnn

./: .gitignore  README.md  main.py  main_epoch.py  main_epoch_72.py  main_epoch_75.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
examples/: Simple LUTNN.ipynb
hdl/: images.txt
hdl/sv/: convert2sv.py  tb_NET.sv
hdl/vhdl/: convert2vhdl.py  gen_binarized_MNIST.py  tb_NET.vhd
llnn/: lutlayer.py  lutnn.py
lutnn/: lutlayer.py  lutnn.py
utils/: cifar10.py  jsc.py  mnist.py
vhdl/: MNIST2hex.py  binarized_20x20_MNIST.txt  convert2vhdl.py
